[package]
name = "codycache"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate"] }
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
parking_lot = "0.12"
url = "2"

# IP/CIDR parsing
ipnet = "2"

# Fast hashing for cache keys
blake3 = "1"

# Disk cache index
sled = "0.34"
bincode = "1"

[profile.release]
lto = true
codegen-units = 1
